# stop-motion

./: .gitignore  pyproject.toml  stop_motion.py
